--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "gedmo/doctrine-extensions": "^2.4",
         "imagine/imagine": "^0.6.3",
         "neilime/zf2-twb-bundle": "2.*@stable",
-        "manuakasam/sam-user": "dev-master"
+        "zf-commons/zfc-user": "^1.4",
+        "zf-commons/zfc-user-doctrine-orm": "^1.0",
+        "bjyoungblood/bjy-authorize": "1.4"
     }
 }
